src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>OCR_Rollout_Code__c</fullName>
        <label>Rollout Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Rollout_ID__c</fullName>
        <label>Rollout ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Rollout_State__c</fullName>
        <label>Rollout State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPCD_All_Day_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RPCD_All_Day_Event</description>
        <label>All Day Event?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPCD_End_AM_PM__c</fullName>
        <description>End AM/PM</description>
        <label>End AM/PM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPCD_End_Hour__c</fullName>
        <description>End Hour</description>
        <label>End Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPCD_End_Minute__c</fullName>
        <description>End Minute</description>
        <label>End Minute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPCD_Location_City__c</fullName>
        <description>RPCD_Location_City</description>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPCD_Location_State__c</fullName>
        <description>RPCD_Location_State</description>
        <label>Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPCD_Location_Zip__c</fullName>
        <description>RPCD_Location_Zip</description>
        <label>Location Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPCD_Location__c</fullName>
        <description>RPCD_Location</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPCD_Start_AM_PM__c</fullName>
        <description>Start AM/PM</description>
        <label>Start AM/PM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPCD_Start_Hour__c</fullName>
        <description>Start Hour</description>
        <label>Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPCD_Start_Minute__c</fullName>
        <description>Start Minute</description>
        <label>Start Minute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Property_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Real Property Campaign</description>
        <label>Real Property Campaign</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Real_Property_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Real_Property_Campaign__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Real Property Campaigns</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>OCR_Title_VI_Rollouts</fullName>
        <columns>OCR_Rollout_ID__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>OCR_Rollout_Code__c</columns>
        <columns>OCR_Rollout_State__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Title_VI_Rollout</value>
        </filters>
        <label>Title VI Rollouts</label>
        <sharedTo>
            <group>OCR_Title_VI_Users</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>General_Campaign</fullName>
        <active>true</active>
        <description>A general campaign record type</description>
        <label>General Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title_VI_Rollout</fullName>
        <active>true</active>
        <description>This is the campaign record type for Title VI, named for Title VI&apos;s terminology.</description>
        <label>Title VI Rollout</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Actual_Cost_not_Negative</fullName>
        <active>true</active>
        <description>Actual cost should not be negative</description>
        <errorConditionFormula>ActualCost &lt; 0</errorConditionFormula>
        <errorMessage>Actual cost cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budgeted_cost_not_negative</fullName>
        <active>true</active>
        <description>The budgeted cost should not be negative.</description>
        <errorConditionFormula>BudgetedCost &lt; 0</errorConditionFormula>
        <errorMessage>The budgeted cost cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expected_Revenue_not_negative</fullName>
        <active>true</active>
        <description>The expected revenue should not be a negative number.</description>
        <errorConditionFormula>ExpectedRevenue &lt; 0</errorConditionFormula>
        <errorMessage>The expected revenue cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mtg_End_Time_After_Start_Time</fullName>
        <active>true</active>
        <description>Validate that the meeting end time must be after the start time</description>
        <errorConditionFormula>IF (OR(ISPICKVAL(RPCD_End_AM_PM__c, &apos;AM&apos;), VALUE(TEXT(RPCD_End_Hour__c)) = 12), 
IF (OR(ISPICKVAL(RPCD_Start_AM_PM__c, &apos;AM&apos;), VALUE(TEXT(RPCD_Start_Hour__c)) = 12), 
((VALUE(TEXT(RPCD_End_Hour__c)) * 60) + VALUE(TEXT(RPCD_End_Minute__c))) &lt; ((VALUE(TEXT(RPCD_Start_Hour__c)) * 60) + VALUE(TEXT(RPCD_Start_Minute__c))), 
((VALUE(TEXT(RPCD_End_Hour__c)) * 60) + VALUE(TEXT(RPCD_End_Minute__c))) &lt; (((VALUE(TEXT(RPCD_Start_Hour__c)) + 12) * 60) + VALUE(TEXT(RPCD_Start_Minute__c))) 
), 
IF (OR(ISPICKVAL(RPCD_Start_AM_PM__c, &apos;AM&apos;), VALUE(TEXT(RPCD_Start_Hour__c)) = 12), 
(((VALUE(TEXT(RPCD_End_Hour__c)) + 12) * 60) + VALUE(TEXT(RPCD_End_Minute__c))) &lt; ((VALUE(TEXT(RPCD_Start_Hour__c)) * 60) + VALUE(TEXT(RPCD_Start_Minute__c))), 
(((VALUE(TEXT(RPCD_End_Hour__c)) + 12) * 60) + VALUE(TEXT(RPCD_End_Minute__c))) &lt; (((VALUE(TEXT(RPCD_Start_Hour__c)) + 12) * 60) + VALUE(TEXT(RPCD_Start_Minute__c))) 
) 
)</errorConditionFormula>
        <errorMessage>End time cannot be prior to start time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Sent_Not_Negative</fullName>
        <active>true</active>
        <description>The number sent field should not accept negative values</description>
        <errorConditionFormula>NumberSent &lt; 0</errorConditionFormula>
        <errorMessage>Number Sent cannot be negative.</errorMessage>
    </validationRules>
</CustomObject>